--- a/Dia1/main/index.html
+++ b/Dia1/main/index.html
@@ -8,5 +8,5 @@
 <body>
     
 </body>
-<script src="./scripts/script.js"></script>
+<script type="module" src="./scripts/script.js"></script>
 </html>
