feat :sparkles: Developing Pokedex

--- a/Dia9/index.html
+++ b/Dia9/index.html
@@ -16,8 +16,8 @@
             <img id="pokemon" src="#" alt="pokemon">
             </div>
             <span id="data">
-                <span>1 - </span>
-                <span>bulbasaur</span>
+                <span id="posNum">1 - </span>
+                <span id="name">bulbasaur</span>
             </span>
             <form>
                 <input type="search" placeholder="Name or Number">
