--- a/Dia11/index.html
+++ b/Dia11/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="rules" id="rules">
-        <button id="backMenu" class="btnAction"><span>Back Menu</span><span><img src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span></button>
+        <button id="backMenu2" class="btnAction"><span>Back Menu</span><span><img src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span></button>
         <h1>Helowis</h1>
     </div>
 </body>
