feat :lipstick: Add media query

--- a/Dia11/index.html
+++ b/Dia11/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="rules" id="rules">
-        <button id="backMenu5" class="btnAction"><span>Back Menu</span><span><img
+        <button id="backMenu5" class="btnPlay"><span>Back Menu</span><span><img
                     src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""
                     class="action"></span></button>
         <pre>
