feat :lipstick: Change colors

--- a/Dia11/index.html
+++ b/Dia11/index.html
@@ -46,20 +46,26 @@
                             class="action"></span></button>
             </div>
         </div>
-        <div id="youLost" class="alert">
+        <div id="youLost" class="containAlert">
+            <div class="alert">
             <h1>You lost</h1>
             <button id="backMenu2" class="btnPlay"><span>Back Menu</span><span><img
                         src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
         </div>
-        <div id="youWon" class="alert">
+        </div>
+        <div id="youWon" class="containAlert">
+            <div class="alert">
             <h1>You won!</h1>
             <button id="backMenu3" class="btnPlay"><span>Back Menu</span><span><img
                         src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
         </div>
-        <div id="tie" class="alert">
+        </div>
+        <div id="tie" class="containAlert">
+            <div class="alert">
             <h1>Tie</h1>
             <button id="backMenu4" class="btnPlay"><span>Back Menu</span><span><img
                         src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
+        </div>
         </div>
     </div>
     <div class="rules" id="rules">
