feat :lipstick: Add new game button

--- a/Dia11/index.html
+++ b/Dia11/index.html
@@ -35,42 +35,49 @@
             <h1 class="titleGame">BlackJack 21</h1>
             <div class="hand" id="playerHand"></div>
             <div class="actions">
-                <button id="hit" class="btnAction"><span>Hit</span><span><img
-                            src="./resources/img/playing_cards_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""
-                            class="action"></span></button>
-                <button id="stand" class="btnAction"><span>Stand</span><span><img
-                            src="./resources/img/front_hand_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""
-                            class="action"></span></button>
-                <button id="backMenu" class="btnAction"><span>Back Menu</span><span><img
-                            src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""
-                            class="action"></span></button>
+                <button id="hit" class="btnAction">
+                    <span>Hit</span>
+                    <span><img src="./resources/img/playing_cards_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                </button>
+                <button id="stand" class="btnAction">
+                    <span>Stand</span>
+                    <span><img src="./resources/img/front_hand_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                </button>
+                <button id="startGame" class="btnAction">
+                    <span>New Game</span>
+                    <span><img src="./resources/img/joystick_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                </button>
+                <button id="backMenu" class="btnAction">
+                    <span>Back Home</span>
+                    <span><img src="./resources/img/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                </button>
             </div>
         </div>
         <div id="youLost" class="containAlert">
             <div class="alert">
             <h1>You lost</h1>
-            <button id="backMenu2" class="btnPlay"><span>Back Menu</span><span><img
+            <button id="backMenu2" class="btnPlay"><span>Back Game</span><span><img
                         src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
         </div>
         </div>
         <div id="youWon" class="containAlert">
             <div class="alert">
             <h1>You won!</h1>
-            <button id="backMenu3" class="btnPlay"><span>Back Menu</span><span><img
+            <button id="backMenu3" class="btnPlay"><span>Back Game</span><span><img
                         src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
         </div>
         </div>
         <div id="tie" class="containAlert">
             <div class="alert">
             <h1>Tie</h1>
-            <button id="backMenu4" class="btnPlay"><span>Back Menu</span><span><img
+            <button id="backMenu4" class="btnPlay"><span>Back Game</span><span><img
                         src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
         </div>
         </div>
     </div>
     <div class="rules" id="rules">
-        <button id="backMenu5" class="btnPlay"><span>Back Menu</span><span><img
-                    src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""
+        <button id="backMenu5" class="btnPlay"><span>Back Home</span><span><img
+                    src="./resources/img/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""
                     class="action"></span></button>
         <pre>
 Blackjack Rules:
