feat :sparkles: Add chips

--- a/Dia11/index.html
+++ b/Dia11/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="https://deckofcardsapi.com/static/img/favicon/favicon-96x96.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://deckofcardsapi.com/static/img/favicon/favicon-96x96.png"
+        type="image/x-icon">
     <title>Blackjack 21</title>
 </head>
 
@@ -21,6 +22,8 @@
                     d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
                     fill="currentColor" class="octo-body" />
             </svg></a>
+        <img id="btnSettings" class="settings" src="./resources/img/settings_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg"
+            alt="">
         <h1 class="titleMenu">Blac<span class="textAnimation1">k</span>Jack <span class="textAnimation2">21</span></h1>
         <div class="btnsMenu">
             <button id="btnPlay" class="btnPlay"><span>Lets go!</span><span>Play</span></button>
@@ -31,48 +34,69 @@
     </div>
     <div id="game" class="game">
         <div class="table">
+            <div class="containChips">
+                <img src="./resources/img/poker_chip_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                <h1>Chips: <span id="chips"></span></h1>
+            </div>
             <div class="hand" id="dealerHand"></div>
             <h1 class="titleGame">BlackJack 21</h1>
             <div class="hand" id="playerHand"></div>
             <div class="actions">
                 <button id="hit" class="btnAction">
                     <span>Hit</span>
-                    <span><img src="./resources/img/playing_cards_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                    <span><img src="./resources/img/playing_cards_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""
+                            class="action"></span>
                 </button>
                 <button id="stand" class="btnAction">
                     <span>Stand</span>
-                    <span><img src="./resources/img/front_hand_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                    <span><img src="./resources/img/front_hand_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""
+                            class="action"></span>
                 </button>
-                <button id="startGame" class="btnAction">
+                <button id="newGame" class="btnAction">
                     <span>New Game</span>
-                    <span><img src="./resources/img/joystick_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                    <span><img src="./resources/img/joystick_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""
+                            class="action"></span>
                 </button>
                 <button id="backMenu" class="btnAction">
                     <span>Back Home</span>
-                    <span><img src="./resources/img/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="action"></span>
+                    <span><img src="./resources/img/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg" alt=""
+                            class="action"></span>
                 </button>
             </div>
         </div>
         <div id="youLost" class="containAlert">
             <div class="alert">
-            <h1>You lost</h1>
-            <button id="backMenu2" class="btnPlay"><span>Back Game</span><span><img
-                        src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
-        </div>
+                <h1>You lost</h1>
+                <button id="backMenu2" class="btnPlay"><span>Back Game</span><span><img
+                            src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg"
+                            alt=""></span></button>
+            </div>
         </div>
         <div id="youWon" class="containAlert">
             <div class="alert">
-            <h1>You won!</h1>
-            <button id="backMenu3" class="btnPlay"><span>Back Game</span><span><img
-                        src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
-        </div>
+                <h1>You won!</h1>
+                <button id="backMenu3" class="btnPlay"><span>Back Game</span><span><img
+                            src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg"
+                            alt=""></span></button>
+            </div>
         </div>
         <div id="tie" class="containAlert">
             <div class="alert">
-            <h1>Tie</h1>
-            <button id="backMenu4" class="btnPlay"><span>Back Game</span><span><img
-                        src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""></span></button>
+                <h1>Tie</h1>
+                <button id="backMenu4" class="btnPlay"><span>Back Game</span><span><img
+                            src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg"
+                            alt=""></span></button>
+            </div>
         </div>
+        <div id="bet" class="containAlert">
+            <div class="alert">
+                <img id="backMenuBet" class="backMenuBet" src="./resources/img/logout_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt="">
+                <h2 class="title2">Select your Bet</h2>
+                <input type="number" id="playerBet" min="1" max="99999" value="10">
+                <button id="startGame" class="btnPlay"><span>Start Game</span><span><img
+                            src="./resources/img/poker_chip_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg"
+                            alt=""></span></button>
+            </div>
         </div>
     </div>
     <div class="rules" id="rules">
@@ -130,6 +154,16 @@ Blackjack is a card game played against the dealer. The goal is to get a hand th
 
     Push (Tie) if both of you have the same total.
         </pre>
+    </div>
+    <div class="rules" id="settings">
+        <button id="backMenu6" class="btnPlay"><span>Back Home</span><span><img
+                    src="./resources/img/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg" alt=""
+                    class="action"></span></button>
+        <h2 class="title2">Set your Chips</h2>
+        <input type="number" id="setChips" min="1" max="99999" value="10">
+        <button id="btnSetChips" class="btnPlay"><span>Set Chips</span><span><img
+                    src="./resources/img/poker_chip_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24 blue.svg"
+                    alt=""></span></button>
     </div>
 </body>
 <script type="module" src="./scripts/script.js"></script>
